[package]
name = "csbubble_sort"
version = "0.1.0"
edition = "2021"
description = "A simple bubble sort implementation for Vec"
authors = ["Elihu Diaz Álvarez"]
keywords = ["bubble_sort", "sort", "vec"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
